Update all code to latest state

--- a/html-templates/add-task.html
+++ b/html-templates/add-task.html
@@ -27,28 +27,28 @@
         <nav class="nav-wrapper">
             <ul>
                 <li class="nav-link">
-                    <div class="img-wrapper">
+                    <a href="summary.html" data-task="navLink">
                         <img src="../assets/icons/summary.svg" alt="summary">
-                    </div>
-                    <a href="summary.html" data-task="navLink">Summary</a>
+                        Summary
+                    </a>
                 </li>
                 <li class="nav-link selected">
-                    <div class="img-wrapper">
+                    <a href="add-task.html" data-task="navLink">
                         <img src="../assets/icons/add-task.svg" alt="add-task">
-                    </div>
-                    <a href="add-task.html" data-task="navLink">Add Task</a>
+                        Add Task
+                    </a>
                 </li>
                 <li class="nav-link">
-                    <div class="img-wrapper">
+                    <a href="board.html" data-task="navLink">
                         <img src="../assets/icons/board.svg" alt="board">
-                    </div>
-                    <a href="board.html" data-task="navLink">Board</a>
+                        Board
+                    </a>
                 </li>
                 <li class="nav-link">
-                    <div class="img-wrapper">
+                    <a href="contacts.html" data-task="navLink">
                         <img src="../assets/icons/contacts.svg" alt="contacts">
-                    </div>
-                    <a href="contacts.html" data-task="navLink">Contacts</a>
+                        Contacts
+                    </a>
                 </li>
             </ul>
             <ul class="bottom-links">
@@ -74,10 +74,10 @@
             </nav>
             <div class="menu-container">
                 <div class="menu" id="menu">
-                    <a href="../html-templates/help.html" class="menu-item help-page">Help</a>
-                    <a href="./legal-notice.html" class="menu-item">Legal Notice</a>
-                    <a href="./privacy-policy.html" class="menu-item">Privacy Police</a>
-                    <a href="../index.html" class="menu-item">Log out</a>
+                    <a href="../html-templates/help.html" data-task="navLink" class="menu-item">Help</a>
+                    <a href="./legal-notice.html" data-task="navLink" class="menu-item">Legal Notice</a>
+                    <a href="./privacy-policy.html" data-task="navLink" class="menu-item">Privacy Police</a>
+                    <a href="../index.html" data-task="navLink" class="menu-item">Log out</a>
                 </div>
             </div>
         </section>
