--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
   <link rel="icon" type="image/x-icon" href="../assets/icons/flavicon.png" />
-  <link rel="stylesheet" href="../styles/add-task.css">
-  <link rel="stylesheet" href="../styles/login.css">
-  <link rel="stylesheet" href="../styles/signup.css">
-  <link rel="stylesheet" href="../styles/reset.css">
+  <link rel="stylesheet" href="./styles/add-task.css">
+  <link rel="stylesheet" href="./styles/login.css">
+  <link rel="stylesheet" href="./styles/signup.css">
+  <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="../styles/responsive.css">
-  <script src="../scripts/api.js"></script>
-  <script src="../scripts/add-task.js"></script>
-  <script src="../scripts/signup.js"></script>
-  <script src="../scripts/login.js"></script>
-  <script src="../script.js"></script>
+  <link rel="stylesheet" href="./styles/responsive.css">
+  <script src="./scripts/api.js"></script>
+  <script src="./scripts/add-task.js"></script>
+  <script src="./scripts/signup.js"></script>
+  <script src="./scripts/login.js"></script>
+  <script src="./script.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     </div>
     <div class="signup">
       <span>Not a Join user?</span>
-      <a href="../html-templates/signup.html" class="signup-btn">Sign up</a>
+      <a href="./html-templates/signup.html" class="signup-btn">Sign up</a>
     </div>
   </header>
 
