--- a/html-templates/privacy-policy.html
+++ b/html-templates/privacy-policy.html
@@ -57,11 +57,12 @@
     <main id="right-content-wrapper" class="privacy-container">
         <section id="navbar">
             <nav class="navbar">
+                <img class="join-logo-nav" src="../assets/icons/join-logo.svg" alt="join logo">
                 <h2>
                     Kanban Project Management Tool
                 </h2>
                 <div class="nav-imgs">
-                    <img src="../assets/icons/help.svg" alt="help-symbol">
+                    <img class="help-symbol" src="../assets/icons/help.svg" alt="help-symbol">
                     <button class="profile-picture" onclick="toggleMenu()"></button>
                 </div>
             </nav>
