added login logo animation and made some css changes

--- a/html-templates/board.html
+++ b/html-templates/board.html
@@ -101,7 +101,7 @@
                     <div style="display: flex;">
                         <!-- desktop input -->
                         <div class="search-field-wrapper search-field-wrapper-desktop">
-                            <input type="search" placeholder="Find Task" id="search-input" class="search-field"
+                            <input type="search" placeholder="Find Task" id="search-input-desktop" class="search-field"
                                 oninput="searchTasks()">
                             <span class="search-devider"></span>
                             <img src="../assets/icons/search.svg" alt="Search" class="search-icon">
@@ -114,7 +114,7 @@
                     </div>
                     <!-- mobile input -->
                     <div class="search-field-wrapper search-field-wrapper-mobile hidden">
-                        <input type="search" placeholder="Find Task" id="search-input" class="search-field"
+                        <input type="search" placeholder="Find Task" id="search-input-mobile" class="search-field"
                             oninput="searchTasks()">
                         <span class="search-devider"></span>
                         <img src="../assets/icons/search.svg" alt="Search" class="search-icon">
