--- a/html-templates/signup.html
+++ b/html-templates/signup.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign up</title>
+    <title>Sign up</title>
     <link rel="icon" type="image/x-icon" href="../assets/icons/flavicon.png" />
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/signup.css">
     <link rel="stylesheet" href="../styles/add-task.css">
     <link rel="stylesheet" href="../styles/board.css">
+
     <script src="../scripts/api.js"></script>
     <script src="../scripts/add-task.js"></script>
     <script src="../scripts/signup.js"></script>
@@ -22,10 +23,13 @@
             <img src="../assets/icons/join-logo.svg" alt="join-logo" class="join-logo-signup">
         </div>
     </header>
+
     <main class="main">
         <div class="signup-container">
             <div class="titel-container">
-                <a href="login.html"><img src="../assets/icons/left-arrow-.png" alt="arrow-icon" class="arrow-icon"></a>
+                <a href="index.html">
+                    <img src="../assets/icons/left-arrow-.png" alt="arrow-icon" class="arrow-icon">
+                </a>
                 <h1 class="login-title">Sign up</h1>
             </div>
             <div class="underline"></div>
@@ -57,7 +61,9 @@
                 <p class="error-signup" data-field="errorPassword"></p>
                 <div class="checkbox-container">
                     <input type="checkbox" id="privacyCheckbox" name="vehicle1">
-                    <label for="vehicle1"> I accept <btn class="privacy-text" onclick="openPrivacy()">the Privacy</btn></label>
+                    <label for="vehicle1"> I accept the <btn class="privacy-text" onclick="openPrivacy()">Privacy policy
+                        </btn>
+                    </label>
                 </div>
                 <div class="button-group">
                     <button class="btn primary">Sign in</button>
@@ -65,11 +71,13 @@
             </form>
         </div>
     </main>
+
     <div id="overlay" class="overlay hidden">
         <div class="overlay-wrapper signup-success transit">
             <h2>Login war erfolgreich!</h2>
         </div>
     </div>
+
     <footer>
         <div class="Legal-texts">
             <span class="Privacy-text">Privacy Policy</span>
