Fix responsive issues, add user filter, and update user selection design

--- a/html-templates/signup.html
+++ b/html-templates/signup.html
@@ -25,7 +25,7 @@
     <main class="main">
         <div class="signup-container">
             <div class="titel-container">
-                <a href="login.html"><img src="../assets/icons/left-arrow-.png" alt="arrow-icon" class="arrow-icon"></a>
+                <a href="../index.html"><img src="../assets/icons/left-arrow-.png" alt="arrow-icon" class="arrow-icon"></a>
                 <h1 class="login-title">Sign up</h1>
             </div>
             <div class="underline"></div>
