--- a/html-templates/summary.html
+++ b/html-templates/summary.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../styles/siderbar.css">
     <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/summary.css">
-    <link rel="stylesheet" href="../styles/responsive.css">
     <link rel="stylesheet" href="../styles/right-content-wrapper.css">
     <script src="../script.js"></script>
     <script src="../scripts/api.js"></script>
@@ -85,6 +84,7 @@
                     <h1>Join 360</h1>
                     <span class="divider"></span>
                     <h2 class="desktop-view">Key Metrics at a Glance</h2>
+                    <span class="divider-mobile"></span>
                 </div>
 
                 <section class="dashboard-summary">
