--- a/html-templates/board.html
+++ b/html-templates/board.html
@@ -20,6 +20,7 @@
     <script src="../scripts/templates.js"></script>
     <script src="../scripts/add-task.js"></script>
     <script src="../script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
 </head>
 
@@ -124,6 +125,41 @@
                             <h3>To do</h3>
                             <img src="../assets/icons/plus_button.svg" alt="plus-button" onclick="addTask('to-do')">
                         </div>
+                        <div class="task-wrapper" data-category="to-do" ondragover="test(event)"></div>
+                    </div>
+
+                    <div class="column" data-task="in-progress">
+                        <div class="column-header">
+                            <h3>In progress</h3>
+                            <img src="../assets/icons/plus_button.svg" alt="plus-button"
+                                onclick="addTask('in-progress')">
+                        </div>
+                        <div class="task-wrapper" data-category="in-progress" ondragover="test(event)"></div>
+                    </div>
+
+                    <div class="column" data-task="await-feedback">
+                        <div class="column-header">
+                            <h3>Await feedback</h3>
+                            <img src="../assets/icons/plus_button.svg" alt="plus-button"
+                                onclick="addTask('await-feedback')">
+                        </div>
+                        <div class="task-wrapper" data-category="await-feedback" ondragover="test(event)"></div>
+                    </div>
+
+                    <div class="column" data-task="done">
+                        <div class="column-header">
+                            <h3>Done</h3>
+                        </div>
+                        <div class="task-wrapper" data-category="done" ondragover="test(event)"></div>
+                    </div>
+                </div>
+
+                <!-- <div class="board">
+                    <div class="column" data-task="to-do">
+                        <div class="column-header">
+                            <h3>To do</h3>
+                            <img src="../assets/icons/plus_button.svg" alt="plus-button" onclick="addTask('to-do')">
+                        </div>
                         <div class="task-wrapper" ondrop="dropHandler(event, 'to-do')"
                             ondragover="dragoverHandler(event)"></div>
                     </div>
@@ -155,7 +191,8 @@
                         <div class="task-wrapper" ondrop="dropHandler(event, 'done')"
                             ondragover="dragoverHandler(event)"></div>
                     </div>
-                </div>
+                </div> -->
+
                 <div class="no-results hidden">No tasks found</div>
             </div>
         </section>
