extend URL search parameters and refactor functions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="button-group">
                     <button type="submit" class="btn primary" id="login-btn" onclick="handleLogin()" disabled>Log
                         in</button>
-                    <button type="button" class="btn secondary" onclick="guestLogin()">Guest Log in</button>
+                    <button type="button" class="btn secondary" onclick="startLogin('Guest', 'summary')">Guest Log in</button>
                 </div>
             </form>
         </div>
