--- a/html-templates/help.html
+++ b/html-templates/help.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="../styles/siderbar.css">
     <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/add-task.css">
-    <link rel="stylesheet" href="../styles/help.css">
-
     <script src="../scripts/api.js"></script>
     <script src="../scripts/templates.js"></script>
     <script src="../script.js"></script>
@@ -24,7 +22,7 @@
         <img class="join-logo" src="../assets/icons/join-dark.svg" alt="join-logo">
         <nav class="nav-wrapper">
             <ul>
-                <li class="nav-link selected">
+                <li class="nav-link">
                     <a href="summary.html" data-task="navLink">
                         <img src="../assets/icons/summary.svg" alt="summary">
                         Summary
@@ -63,12 +61,11 @@
                     Kanban Project Management Tool
                 </h2>
                 <div class="nav-imgs">
-                    <a class="help-symbol" href="../html-templates/help.html" data-task="navLink"></a>
+                    <img class="help-symbol" src="../assets/icons/help.svg" alt="help-symbol">
                     <button class="profile-picture" onclick="toggleMenu()"></button>
                 </div>
             </nav>
         </section>
-
         <section class="menu-container d-none" onclick="toggleMenu()">
             <div class="menu" id="menu">
                 <a href="../html-templates/help.html" data-task="navLink" class="menu-item">Help</a>
@@ -77,116 +74,127 @@
                 <a href="../index.html" data-task="navLink" class="menu-item">Log out</a>
             </div>
         </section>
-        
-        <div class="container">
-            <div class="header">
-                <h1>Help</h1>
-                <a href="../html-templates/summary.html">
-                    <button class="back-button">←</button>
-                </a>
+        <section class="privacy-section">
+            <div class="page-header">
+                <h1 class="header-task">Help</h1>
+                <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
             </div>
 
-            <div class="content-section">
-                <p class="intro-text">
-                    Welcome to the help page for <a href="#" class="join-link">Join</a>, your guide to using our kanban
-                    project management tool. Here, we'll provide an overview of what <a href="#"
-                        class="join-link">Join</a> is, how it can benefit you, and how to use it.
-                </p>
+            <p class="spacer-bottom">
+                Welcome to the help page for
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, your guide to using our kanban
+                project management tool. Here, we'll provide an overview of what
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>
+                is, how it can benefit you, and how to use it.
+            </p>
 
-                <h2>What is Join?</h2>
+            <h2>What is Join?</h2>
+            <p class="help-subline">
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is a kanban-based project
+                management tool designed and built
+                by a group of dedicated students as part of their web development bootcamp at the Developer
+                Akademie.
+            </p>
+
+            <p class="help-subline">
+                Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
+                work-in-progress, and maximize efficiency (or flow).
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>
+                leverages the principles of kanban to help users manage their tasks and projects in an intuitive,
+                visual interface.
+            </p>
+
+            <div class="spacer-bottom">
                 <p>
-                    <a href="#" class="join-link">Join</a> is a kanban-based project management tool designed and built
-                    by a group of dedicated students as part of their web development bootcamp at the Developer
-                    Akademie.
+                    It is important to note that
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is designed as an
+                    educational exercise and is not intended for extensive business usage. While we strive to ensure
+                    the best possible user experience, we cannot guarantee consistent availability, reliability,
+                    accuracy, or other aspects of quality regarding
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a>.
                 </p>
+            </div>
 
-                <p>
-                    Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
-                    work-in-progress, and maximize efficiency (or flow). <a href="#" class="join-link">Join</a>
-                    leverages the principles of kanban to help users manage their tasks and projects in an intuitive,
-                    visual interface.
-                </p>
+            <h2>How to use it</h2>
+            <p class="help-subline">
+                Here is a step-by-step guide on how to use
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>:
+            </p>
 
-                <div class="warning">
+            <div class="info-section">
+                <h2 class="info-number">1.</h2>
+                <div>
+                    <p class="help-headline"><strong>Exploring the Board</strong></p>
                     <p>
-                        It is important to note that <a href="#" class="join-link">Join</a> is designed as an
-                        educational exercise and is not intended for extensive business usage. While we strive to ensure
-                        the best possible user experience, we cannot guarantee consistent availability, reliability,
-                        accuracy, or other aspects of quality regarding <a href="#" class="join-link">Join</a>.
+                        When you log in to
+                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, you'll find a default
+                        board. This
+                        board represents your project and contains four default lists: "To Do", "In Progress", "Await
+                        feedback" and "Done".
                     </p>
                 </div>
             </div>
 
-            <div class="content-section">
-                <h2>How to use it</h2>
-                <p>Here is a step-by-step guide on how to use <a href="#" class="join-link">Join</a>:</p>
-
-                <div class="step">
-                    <span class="step-number">1.</span>
-                    <div class="step-title">Exploring the Board</div>
-                    <div class="step-content">
-                        When you log in to <a href="#" class="join-link">Join</a>, you'll find a default board. This
-                        board represents your project and contains four default lists: "To Do", "In Progress", "Await
-                        feedback" and "Done".
-                    </div>
-                </div>
-
-                <div class="step">
-                    <span class="step-number">2.</span>
-                    <div class="step-title">Creating Contacts</div>
-                    <div class="step-content">
-                        In <a href="#" class="join-link">Join</a>, you can add contacts to collaborate on your projects.
+            <div class="info-section">
+                <h2 class="info-number">2.</h2>
+                <div>
+                    <p class="help-headline"><strong>Creating Contacts</strong></p>
+                    <p>
+                        In <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, you can add contacts
+                        to collaborate on your projects.
                         Go to the "Contacts" section, click on "New contact", and fill in the required information. Once
                         added, these contacts can be assigned tasks and they can interact with the tasks on the board.
-                    </div>
+                    </p>
                 </div>
+            </div>
 
-                <div class="step">
-                    <span class="step-number">3.</span>
-                    <div class="step-title">Adding Cards</div>
-                    <div class="step-content">
+            <div class="info-section">
+                <h2 class="info-number">3.</h2>
+                <div>
+                    <p class="help-headline"><strong>Adding Cards</strong></p>
+                    <p>
                         Now that you've added your contacts, you can start adding cards. Cards represent individual
                         tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task
                         details in the card, like task name, description, due date, assignees, etc.
-                    </div>
+                    </p>
                 </div>
+            </div>
 
-                <div class="step">
-                    <span class="step-number">4.</span>
-                    <div class="step-title">Moving Cards</div>
-                    <div class="step-content">
+            <div class="info-section">
+                <h2 class="info-number">4.</h2>
+                <div>
+                    <p class="help-headline"><strong>Moving Cards</strong></p>
+                    <p>
                         As the task moves from one stage to another, you can reflect that on the board by dragging and
                         dropping the card from one list to another.
-                    </div>
+                    </p>
                 </div>
+            </div>
 
-                <div class="step">
-                    <span class="step-number">5.</span>
-                    <div class="step-title">Deleting Cards</div>
-                    <div class="step-content">
+            <div class="info-section">
+                <h2 class="info-number">5.</h2>
+                <div>
+                    <p class="help-headline"><strong>Deleting Cards</strong></p>
+                    <p class="help-subline">
                         Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a
                         card will permanently remove it from the board. Please exercise caution when deleting cards, as
                         this action is irreversible.
-                    </div>
-                </div>
-
-                <p style="margin-top: 30px;">
-                    Remember that using <a href="#" class="join-link">Join</a> effectively requires consistent updates
-                    from you and your team to ensure the board reflects the current state of your project.
-                </p>
-
-                <div class="contact-info">
+                    </p>
+                    <p class="help-subline">
+                        Remember that using
+                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a> effectively requires
+                        consistent
+                        updates from you and your team to ensure the board reflects the current state of your project.
+                    </p>
                     <p>
-                        Have more questions about <a href="#" class="join-link">Join</a>? Feel free to contact us at
+                        Have more questions about
+                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a>? Feel free to contact us
+                        at
                         [Your Contact Email]. We're here to help you!
                     </p>
                 </div>
             </div>
-
-            <div class="final-message">
-                Enjoy using Join!
-            </div>
-        </div>
+        </section>
     </main>
 </body>
 
