--- a/html-templates/legal-notice.html
+++ b/html-templates/legal-notice.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add-Task</title>
 
-    <link rel="icon" type="image/x-icon" href="../assets/icons/flavicon.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/icons/flavicon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/siderbar.css">
@@ -76,21 +76,101 @@
                 <a href="../index.html" data-task="navLink" class="menu-item">Log out</a>
             </div>
         </section>
-        
+
         <section id="privacy-en" class="privacy-section">
-            <h1 class="header-task">Impressum</h1>
-            <h2>Angaben gemäß § 5 TMG</h2>
+            <div class="page-header">
+                <h1 class="header-task">Legal Notice</h1>
+                <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
+            </div>
+
+            <h2>Imprint</h2>
             <p class="spacer-bottom">
                 Henning Otte<br>
                 Ludwigstraße 51<br>
                 30151 Hannover<br>
-                Deutschland
+                Germany
             </p>
-            <h2>Kontakt</h2>
+
+            <h3>Exploring the Board</h3>
             <p class="spacer-bottom">
                 E-Mail: <a href="mailto:HOtte@aol.com">HOtte@aol.com</a>
             </p>
+
+            <h3>Acceptance of terms</h3>
+            <p class="spacer-bottom">
+                By accessing and using
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> (Product), you acknowledge and
+                agree to the following terms and conditions,
+                and any policies, guidelines, or amendments thereto that may be presented to you from time to time. We,
+                the listed students, may update or change the terms and conditions from time to time without notice.
+            </p>
+
+            <h3>Scope and ownership of the product</h3>
+            <p class="help-subline">
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> has been developed as part of a
+                student group project in a web development bootcamp at the
+                Developer Akademie GmbH. It has an educational purpose and is not intended for extensive personal &
+                business usage. As such, we cannot guarantee consistent availability, reliability, accuracy, or any
+                other aspect of quality regarding this Product.
+            </p>
+            <p class="spacer-bottom">
+                The design of
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is owned by the Developer
+                Akademie GmbH. Unauthorized use, reproduction,
+                modification, distribution, or replication of the design is strictly prohibited.
+            </p>
+
+            <h3>Proprietary rights</h3>
+            <p class="spacer-bottom">
+                Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all proprietary
+                rights in
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, including any associated
+                copyrighted material, trademarks, and other
+                proprietary information.
+            </p>
+
+            <h3>Use of the product</h3>
+            <p class="spacer-bottom">
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is intended to be used for
+                lawful purposes only, in accordance with all applicable laws and
+                regulations. Any use of
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> for illegal activities, or to
+                harass, harm, threaten, or intimidate another
+                person, is strictly prohibited. You are solely responsible for your interactions with other users of
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>.
+            </p>
+
+            <h3>Disclaimer of warranties and limitation of liability</h3>
+            <p class="spacer-bottom">
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is provided "as is" without
+                warranty of any kind, whether express or implied, including but not
+                limited to the implied warranties of merchantability, fitness for a particular purpose, and
+                non-infringement. In no event will we, the listed students, or the Developer Akademie, be liable for any
+                direct, indirect, incidental, special, consequential or exemplary damages, including but not limited to,
+                damages for loss of profits, goodwill, use, data, or other intangible losses, even if we have been
+                advised of the possibility of such damages, arising out of or in connection with the use or performance
+                of
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>.
+            </p>
+
+            <h3>Indemnity</h3>
+            <p class="help-subline">
+                You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and
+                our affiliates, partners, officers, directors, agents, and employees, from and against any claim,
+                demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of or relating to
+                your use of
+                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> and/or your breach of this Legal
+                Notice.
+            </p>
+
+            <p class="help-subline">
+                For any questions or notices, please contact us at HOtte@aol.com.
+            </p>
+            <p class="spacer-bottom">
+                Date: July 26, 2023
+            </p>
         </section>
+
     </main>
 </body>
 
