--- a/html-templates/privacy-policy.html
+++ b/html-templates/privacy-policy.html
@@ -76,9 +76,12 @@
                 <a href="../index.html" data-task="navLink" class="menu-item">Log out</a>
             </div>
         </section>
-        
-        <section id="privacy-en" class="privacy-section">
-            <h1 class="header-task">Privacy Policy</h1>
+
+        <section class="privacy-section">
+            <div class="page-header">
+                <h1 class="header-task">Privacy Policy</h1>
+                <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
+            </div>
             <h2>1. Controller</h2>
             <p class="spacer-bottom">
                 Henning Otte<br />
