add task border, update help, restyle login & forms

--- a/html-templates/add-task.html
+++ b/html-templates/add-task.html
@@ -22,7 +22,7 @@
 
 <body onload="initAddTaskPage(); initializeNavbar()">
     <div class="sidebar-wrapper">
-        <img class="join-logo" src="../assets/icons/join-dark.svg" alt="join-logo">
+        <img class="join-logo" src="../assets/icons/join-dark.svg" alt="join-logo" focus>
         <nav class="nav-wrapper">
             <ul>
                 <li class="nav-link">
