--- a/html-templates/help.html
+++ b/html-templates/help.html
@@ -75,123 +75,136 @@
             </div>
         </section>
         <section class="privacy-section">
-            <div class="page-header">
-                <h1 class="header-task">Help</h1>
-                <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
-            </div>
+            <div class="info-container">
+                <div class="page-header">
+                    <h1 class="header-task">Help</h1>
+                    <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
+                </div>
 
-            <p class="spacer-bottom">
-                Welcome to the help page for
-                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, your guide to using our kanban
-                project management tool. Here, we'll provide an overview of what
-                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>
-                is, how it can benefit you, and how to use it.
-            </p>
-
-            <h2>What is Join?</h2>
-            <p class="help-subline">
-                <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is a kanban-based project
-                management tool designed and built
-                by a group of dedicated students as part of their web development bootcamp at the Developer
-                Akademie.
-            </p>
-
-            <p class="help-subline">
-                Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
-                work-in-progress, and maximize efficiency (or flow).
-                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>
-                leverages the principles of kanban to help users manage their tasks and projects in an intuitive,
-                visual interface.
-            </p>
-
-            <div class="spacer-bottom">
-                <p>
-                    It is important to note that
-                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is designed as an
-                    educational exercise and is not intended for extensive business usage. While we strive to ensure
-                    the best possible user experience, we cannot guarantee consistent availability, reliability,
-                    accuracy, or other aspects of quality regarding
-                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a>.
+                <p class="spacer-bottom">
+                    Welcome to the help page for
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, your guide to using our
+                    kanban
+                    project management tool. Here, we'll provide an overview of what
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a>
+                    is, how it can benefit you, and how to use it.
                 </p>
-            </div>
 
-            <h2>How to use it</h2>
-            <p class="help-subline">
-                Here is a step-by-step guide on how to use
-                <a href="./summary.html" class="join-link" data-task="navLink">Join</a>:
-            </p>
+                <h2>What is Join?</h2>
+                <p class="help-subline">
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is a kanban-based project
+                    management tool designed and built
+                    by a group of dedicated students as part of their web development bootcamp at the Developer
+                    Akademie.
+                </p>
 
-            <div class="info-section">
-                <h2 class="info-number">1.</h2>
-                <div>
-                    <p class="help-headline"><strong>Exploring the Board</strong></p>
+                <p class="help-subline">
+                    Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit
+                    work-in-progress, and maximize efficiency (or flow).
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a>
+                    leverages the principles of kanban to help users manage their tasks and projects in an intuitive,
+                    visual interface.
+                </p>
+
+                <div class="spacer-bottom">
                     <p>
-                        When you log in to
-                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, you'll find a default
-                        board. This
-                        board represents your project and contains four default lists: "To Do", "In Progress", "Await
-                        feedback" and "Done".
+                        It is important to note that
+                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a> is designed as an
+                        educational exercise and is not intended for extensive business usage. While we strive to ensure
+                        the best possible user experience, we cannot guarantee consistent availability, reliability,
+                        accuracy, or other aspects of quality regarding
+                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a>.
                     </p>
                 </div>
-            </div>
 
-            <div class="info-section">
-                <h2 class="info-number">2.</h2>
-                <div>
-                    <p class="help-headline"><strong>Creating Contacts</strong></p>
-                    <p>
-                        In <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, you can add contacts
-                        to collaborate on your projects.
-                        Go to the "Contacts" section, click on "New contact", and fill in the required information. Once
-                        added, these contacts can be assigned tasks and they can interact with the tasks on the board.
-                    </p>
+                <h2>How to use it</h2>
+                <p class="help-subline">
+                    Here is a step-by-step guide on how to use
+                    <a href="./summary.html" class="join-link" data-task="navLink">Join</a>:
+                </p>
+
+                <div class="info-section">
+                    <h2 class="info-number">1.</h2>
+                    <div>
+                        <p class="help-headline"><strong>Exploring the Board</strong></p>
+                        <p>
+                            When you log in to
+                            <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, you'll find a
+                            default
+                            board. This
+                            board represents your project and contains four default lists: "To Do", "In Progress",
+                            "Await
+                            feedback" and "Done".
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="info-section">
-                <h2 class="info-number">3.</h2>
-                <div>
-                    <p class="help-headline"><strong>Adding Cards</strong></p>
-                    <p>
-                        Now that you've added your contacts, you can start adding cards. Cards represent individual
-                        tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task
-                        details in the card, like task name, description, due date, assignees, etc.
-                    </p>
+                <div class="info-section">
+                    <h2 class="info-number">2.</h2>
+                    <div>
+                        <p class="help-headline"><strong>Creating Contacts</strong></p>
+                        <p>
+                            In <a href="./summary.html" class="join-link" data-task="navLink">Join</a>, you can add
+                            contacts
+                            to collaborate on your projects.
+                            Go to the "Contacts" section, click on "New contact", and fill in the required information.
+                            Once
+                            added, these contacts can be assigned tasks and they can interact with the tasks on the
+                            board.
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="info-section">
-                <h2 class="info-number">4.</h2>
-                <div>
-                    <p class="help-headline"><strong>Moving Cards</strong></p>
-                    <p>
-                        As the task moves from one stage to another, you can reflect that on the board by dragging and
-                        dropping the card from one list to another.
-                    </p>
+                <div class="info-section">
+                    <h2 class="info-number">3.</h2>
+                    <div>
+                        <p class="help-headline"><strong>Adding Cards</strong></p>
+                        <p>
+                            Now that you've added your contacts, you can start adding cards. Cards represent individual
+                            tasks. Click the "+" button under the appropriate list to create a new card. Fill in the
+                            task
+                            details in the card, like task name, description, due date, assignees, etc.
+                        </p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="info-section">
-                <h2 class="info-number">5.</h2>
-                <div>
-                    <p class="help-headline"><strong>Deleting Cards</strong></p>
-                    <p class="help-subline">
-                        Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a
-                        card will permanently remove it from the board. Please exercise caution when deleting cards, as
-                        this action is irreversible.
-                    </p>
-                    <p class="help-subline">
-                        Remember that using
-                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a> effectively requires
-                        consistent
-                        updates from you and your team to ensure the board reflects the current state of your project.
-                    </p>
-                    <p>
-                        Have more questions about
-                        <a href="./summary.html" class="join-link" data-task="navLink">Join</a>? Feel free to contact us
-                        at
-                        [Your Contact Email]. We're here to help you!
-                    </p>
+                <div class="info-section">
+                    <h2 class="info-number">4.</h2>
+                    <div>
+                        <p class="help-headline"><strong>Moving Cards</strong></p>
+                        <p>
+                            As the task moves from one stage to another, you can reflect that on the board by dragging
+                            and
+                            dropping the card from one list to another.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="info-section">
+                    <h2 class="info-number">5.</h2>
+                    <div>
+                        <p class="help-headline"><strong>Deleting Cards</strong></p>
+                        <p class="help-subline">
+                            Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a
+                            card will permanently remove it from the board. Please exercise caution when deleting cards,
+                            as
+                            this action is irreversible.
+                        </p>
+                        <p class="help-subline">
+                            Remember that using
+                            <a href="./summary.html" class="join-link" data-task="navLink">Join</a> effectively requires
+                            consistent
+                            updates from you and your team to ensure the board reflects the current state of your
+                            project.
+                        </p>
+                        <p>
+                            Have more questions about
+                            <a href="./summary.html" class="join-link" data-task="navLink">Join</a>? Feel free to
+                            contact us
+                            at
+                            [Your Contact Email]. We're here to help you!
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
