Improve responsiveness on Board and Contact pages

--- a/html-templates/legal-notice.html
+++ b/html-templates/legal-notice.html
@@ -78,7 +78,7 @@
         </section>
 
         <section id="privacy-en" class="privacy-section">
-            <div class="info-container">
+            <div class="support-container">
                 <div class="page-header">
                     <h1 class="header-task">Legal Notice</h1>
                     <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
