--- a/html-templates/help.html
+++ b/html-templates/help.html
@@ -75,7 +75,7 @@
             </div>
         </section>
         <section class="privacy-section">
-            <div class="info-container">
+            <div class="support-container">
                 <div class="page-header">
                     <h1 class="header-task">Help</h1>
                     <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
