--- a/html-templates/privacy-policy.html
+++ b/html-templates/privacy-policy.html
@@ -78,7 +78,7 @@
         </section>
 
         <section class="privacy-section">
-            <div class="info-container">
+            <div class="support-container">
                 <div class="page-header">
                     <h1 class="header-task">Privacy Policy</h1>
                     <a href="../html-templates/summary.html" data-task="navLink" class="blue-arrow"></a>
